--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -73,6 +73,12 @@ delete:
     requirements: 
         _method: POST
 
+paste:
+    pattern: /notes/paste
+    defaults: { _controller: AcmeMainBundle:Notes:paste }
+    requirements: 
+        _method: POST
+
 notes: 
     pattern: /notes/
     defaults: { _controller: AcmeMainBundle:Notes:index}
