--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -88,3 +88,7 @@ notes_hash:
     defaults: { _controller: AcmeMainBundle:Notes:index}
     requirements:
         hash: "[\w\/]{0,}"
+
+profile: 
+    pattern: /profile/
+    defaults: { _controller: AcmeMainBundle:Profile:index}
