--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -103,6 +103,12 @@ paste:
     requirements: 
         _method: POST
 
+search: 
+    pattern: /notes/search
+    defaults: { _controller: AcmeMainBundle:Notes:search}
+    requirements: 
+        _method: POST
+
 notes: 
     pattern: /notes/
     defaults: { _controller: AcmeMainBundle:Notes:index}
@@ -116,3 +122,4 @@ notes_hash:
 profile: 
     pattern: /profile/
     defaults: { _controller: AcmeMainBundle:Profile:index}
+
