--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,7 +16,7 @@ security:
 
     providers:
         main:
-            entity: { class: Acme\ModelBundle\Entity\User, property: username }
+            entity: { class: Acme\ModelBundle\Entity\User, property: email }
         #in_memory:
         #    memory:
         #        users:
@@ -33,14 +33,14 @@ security:
 
             #pattern: ^/login
             #security: false
-            pattern:    ^/login$
+            pattern:    ^/$
             anonymous:  ~
 
         secured_area:
             pattern:    ^/
             anonymous: ~
             form_login:
-                login_path:  /login
+                login_path:  /
                 check_path:  /login_check
 
             #pattern:    ^/demo/secured/
@@ -55,8 +55,8 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/registration, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, roles: ROLE_USER }
+        - { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/\w+, roles: ROLE_USER }
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
