Новая регистрация пользователей

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -19,12 +19,6 @@ login_check:
 logout:
     pattern:   /logout
 
-registration: 
-    pattern: /registration
-    defaults: { _controller: AcmeSecurityBundle:Default:registration }
-
-
-
 get_note:
     pattern:  /notes/get_note
     defaults: { _controller: AcmeMainBundle:Notes:getNote }
@@ -104,3 +98,15 @@ notes_hash:
 profile: 
     pattern: /profile/
     defaults: { _controller: AcmeMainBundle:Profile:index}
+
+paste:
+    pattern: /reg_apply
+    defaults: { _controller: AcmeSecurityBundle:Default:registration }
+    requirements: 
+        _method: POST
+
+homepage_hash: 
+    pattern: /{hash}
+    defaults: { _controller: AcmeMainBundle:Default:index}
+    requirements:
+        hash: "[\w\/]{0,}"
