--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -4,7 +4,7 @@ jms_security_extra:
 
 security:
     encoders:
-        #Symfony\Component\Security\Core\User\User: sha512
+
         Acme\ModelBundle\Entity\User:
             algorithm:        sha512
             encode_as_base64: false
@@ -17,20 +17,11 @@ security:
     providers:
         main:
             entity: { class: Acme\ModelBundle\Entity\User, property: email }
-        #in_memory:
-        #    memory:
-        #        users:
-        #            user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-        #            admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
 
     firewalls:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
-        #login:
-            #pattern:    ^/$
-            #anonymous:  ~
 
         secured_area:
             pattern:    ^/
@@ -39,20 +30,12 @@ security:
                 login_path:  /
                 check_path:  /login_check
 
-            #pattern:    ^/demo/secured/
-            #form_login:
-            #    check_path: /demo/secured/login_check
-            #    login_path: /demo/secured/login
             logout:
                 path:   /logout
                 target: /
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
 
     access_control:
-        - { path: ^/registration, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/registration$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/reg_apply$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/\w+, roles: ROLE_USER }
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
-        #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
