--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -99,7 +99,7 @@ profile:
     pattern: /profile/
     defaults: { _controller: AcmeMainBundle:Profile:index}
 
-paste:
+reg_apply:
     pattern: /reg_apply
     defaults: { _controller: AcmeSecurityBundle:Default:registration }
     requirements: 
